# SCIQIS_exercise

./: environment.yml  main.py
exercise/.ipynb_checkpoints/: test-checkpoint.ipynb  test_notebook-checkpoint.ipynb
exercise/data_analysis_and_processing/: l6_dataAnalysis.py  process_data.py
exercise/python_package_test/: pyproject.toml
exercise/python_package_test/src/package_test/: __init__.py  test_function.py
